--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,12 +6,12 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Default" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/default">
+  <ion-tab title="Dashboard" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/default">
     <ion-nav-view name="tab-default"></ion-nav-view>
   </ion-tab>
 
   <!-- Programs Tab -->
-  <ion-tab title="Programs" icon-off="ion-android-menu" icon-on="ion-android-menu" href="#/tab/programs">
+  <ion-tab title="Programs" icon-off="ion-clipboard" icon-on="ion-clipboard" href="#/tab/programs">
     <ion-nav-view name="tab-programs"></ion-nav-view>
   </ion-tab>
 
